--- a/css/tables2.css
+++ b/css/tables2.css
@@ -30,7 +30,7 @@ tr:nth-of-type(2n){
     background: hsl(0 0% 0% / 0.15);
 }
 
-@media (max-width: 535px){
+@media (max-width: 820px){
     th{
         display: none;
     }
@@ -50,11 +50,23 @@ tr:nth-of-type(2n){
         font-weight: 700;
         text-transform: capitalize;
     }
-    td:nth-last-of-type(4)::before{
+    td:nth-last-of-type(8)::before{
+        content: "Curso";
+    }
+    td:nth-last-of-type(7)::before{
+        content: "Turma";
+    }
+    td:nth-last-of-type(6)::before{
+        content: "Módulo";
+    }
+    td:nth-last-of-type(5)::before{
         content: "UC";
     }
-    td:nth-last-of-type(3)::before{
+    td:nth-last-of-type(4)::before{
         content: "Professor";
+    }
+    td:nth-last-of-type(3)::before{
+        content: "Turno";
     }
     td:nth-last-of-type(2)::before{
         content: "Data Inicial";
