--- a/css/tables.css
+++ b/css/tables.css
@@ -30,41 +30,169 @@ tr:nth-of-type(2n){
     background: hsl(0 0% 0% / 0.15);
 }
 
+/* TABELA PÁGINA CADASTRAR CRONOGRAMA */
 @media (max-width: 535px){
-    th{
-        display: none;
-    }
-    td{
-        display: grid;
-        grid-template-columns: 15ch auto;
-        gap: 0.5rem;
-        padding: 0.7rem 1rem;
-    }
-    td:first-child{
-        padding-top: 2rem;
-    }
-    td:last-child{
-        padding-bottom: 2rem;
-    }
-    td::before{
-        font-weight: 700;
-        text-transform: capitalize;
-    }
-    td:nth-last-of-type(4)::before{
-        content: "UC";
-    }
-    td:nth-last-of-type(3)::before{
-        content: "Professor";
-    }
-    td:nth-last-of-type(2)::before{
-        content: "Data Inicial";
-    }
-    td:nth-last-of-type(1)::before{
-        content: "Data Final";
+    #cadastrar_cronogramas{
+        th{
+            display: none;
+        }
+        td{ 
+            display: grid;
+            grid-template-columns: 15ch auto;
+            gap: 0.5rem;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "UC";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "Professor";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "Data Inicial";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "Data Final";
+        }
     }
 }
-@media (max-width: 310px){
-    table{
-        width: 100%;
+
+/* TABELA PÁGINA CRONOGRAMA */
+@media (max-width: 820px){
+    #cronogramas{
+        th{
+            display: none;
+        }
+        td{
+            display: grid;
+            grid-template-columns: 15ch auto;
+            gap: 0.5rem;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(8)::before{
+            content: "Curso";
+        }
+        td:nth-last-of-type(7)::before{
+            content: "Turma";
+        }
+        td:nth-last-of-type(6)::before{
+            content: "Módulo";
+        }
+        td:nth-last-of-type(5)::before{
+            content: "UC";
+        }
+        td:nth-last-of-type(4)::before{
+            content: "Professor";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "Turno";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "Data Inicial";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "Data Final";
+        }
+    }
+}
+/* TABELA PÁGINA CRONOGRAMA & CADASTRAR CRONOGRAMA */
+@media (max-width: 280px){
+    .dados_table{
+        width: min(900px, 100% - 3rem);
+        margin-inline: unset;
+    }
+    #cronogramas{
+        th{
+            display: none;
+        }
+        td{
+            display: block;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(8)::before{
+            content: "";
+        }
+        td:nth-last-of-type(7)::before{
+            content: "";
+        }
+        td:nth-last-of-type(6)::before{
+            content: "";
+        }
+        td:nth-last-of-type(5)::before{
+            content: "";
+        }
+        td:nth-last-of-type(4)::before{
+            content: "";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "";
+        }
+    }
+    #cadastrar_cronogramas{
+        th{
+            display: none;
+        }
+        td{ 
+            display: none;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "";
+        }
     }
 }
