--- a/css/tables.css
+++ b/css/tables.css
@@ -1,6 +1,8 @@
 .dados_table{
     width: min(900px, 100% - 3rem);
     margin-inline: auto;
+    margin-bottom: 50px;
+    margin-top: 30px;
 }
 
 table{
@@ -65,6 +67,72 @@ tr:nth-of-type(2n){
             content: "Data Final";
         }
     }
+    #table_usuario{
+        th{
+            display: none;
+        }
+        td{ 
+            display: grid;
+            grid-template-columns: 15ch auto;
+            gap: 0.5rem;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "ID";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "usuário";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "Email";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "CPF";
+        }
+    }
+    #table_adm{
+        th{
+            display: none;
+        }
+        td{ 
+            display: grid;
+            grid-template-columns: 15ch auto;
+            gap: 0.5rem;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "ID";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "usuário";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "Perm";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "Nível de acessíbilidade";
+        }
+    }
 }
 
 /* TABELA PÁGINA CRONOGRAMA */
@@ -73,7 +141,7 @@ tr:nth-of-type(2n){
         th{
             display: none;
         }
-        td{
+        td{ 
             display: grid;
             grid-template-columns: 15ch auto;
             gap: 0.5rem;
@@ -116,11 +184,7 @@ tr:nth-of-type(2n){
     }
 }
 /* TABELA PÁGINA CRONOGRAMA & CADASTRAR CRONOGRAMA */
-@media (max-width: 280px){
-    .dados_table{
-        width: min(900px, 100% - 3rem);
-        margin-inline: unset;
-    }
+@media (max-width: 360px){
     #cronogramas{
         th{
             display: none;
@@ -169,7 +233,7 @@ tr:nth-of-type(2n){
             display: none;
         }
         td{ 
-            display: none;
+            display: block;
             padding: 0.7rem 1rem;
         }
         td:first-child{
@@ -194,5 +258,85 @@ tr:nth-of-type(2n){
         td:nth-last-of-type(1)::before{
             content: "";
         }
+    }
+    #table_usuario{
+        th{
+            display: none;
+        }
+        td{ 
+            display: block;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "";
+        }
+    }
+    #table_adm{
+        th{
+            display: none;
+        }
+        td{ 
+            display: block;
+            padding: 0.7rem 1rem;
+        }
+        td:first-child{
+            padding-top: 2rem;
+        }
+        td:last-child{
+            padding-bottom: 2rem;
+        }
+        td::before{
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+        td:nth-last-of-type(4)::before{
+            content: "";
+        }
+        td:nth-last-of-type(3)::before{
+            content: "";
+        }
+        td:nth-last-of-type(2)::before{
+            content: "";
+        }
+        td:nth-last-of-type(1)::before{
+            content: "";
+        }
+    }
+}
+@media (max-width: 230px){
+    #bloco2_cadastrar_cronogramas .dados_table{
+        width: min(900px, 100% - 3rem);
+        margin-inline: unset;
+    }
+}
+@media (max-width: 250px){
+    #bloco2_cronogramas .dados_table{
+        width: min(900px, 100% - 3rem);
+        margin-inline: unset;
+    }
+}
+@media (max-width: 250px){
+    #bloco2_table_usuario .dados_table{
+        width: min(900px, 100% - 3rem);
+        margin-inline: unset;
     }
 }
